--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^4.0.2",
     "pubsub-js": "^1.9.4",
     "vue": "^2.7.14",
+    "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -38,7 +39,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/comment-directive": "off"
+      "vue/comment-directive": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
